fixed z-index on main

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -26,7 +26,6 @@
 main{
   margin: 0 2rem 0 2rem;
   padding: 0 1rem 0 1rem;
-  z-index: -500;
 }
 
 article{
@@ -85,7 +84,6 @@ a:visited{
 }
 
 .Container{
-  text-align: center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
